Commiting All